# Rakhsha-AI

./: .gitmodules  settings.gradle.kts
.github/workflows/: build-apk.yml  build-release-apk.yml
ai-assistant-api/: build.gradle.kts
ai-assistant-api/src/main/kotlin/dev/ide/ai/: AiAssistant.kt
ai-assistant-impl/: build.gradle.kts
ai-assistant-impl/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
ai-assistant-impl/src/main/kotlin/dev/ide/ai/impl/: LlamaBridge.kt  LlamaCppAssistant.kt
ai-assistant-online/: build.gradle.kts
ai-assistant-online/src/main/kotlin/dev/ide/ai/online/: OnlineAssistant.kt
ide-android/: build.gradle.kts
ide-android/src/main/: AndroidManifest.xml
ide-android/src/main/kotlin/dev/ide/android/: AiChatActivity.kt  AndroidIde.kt  MainActivity.kt  ProjectsDocumentsProvider.kt  SimpleAiChatScreen.kt
ide-android/src/main/kotlin/dev/ide/android/ai/: ModelCatalog.kt  ModelDownloadScreen.kt
ide-android/src/main/kotlin/dev/ide/android/daemon/: BuildDaemonService.kt
ide-android/src/main/res/drawable/: ic_launcher_background_rakshaai.xml
ide-android/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
ide-android/src/main/res/values/: colors.xml  strings.xml
ide-android/src/main/res/xml/: file_paths.xml
ide-core/src/main/kotlin/dev/ide/core/: ProjectManager.kt
ide-core/src/main/kotlin/dev/ide/core/backend/: DiagnosticsBackend.kt  StoreBackend.kt
ide-desktop/src/main/kotlin/dev/ide/desktop/: Main.kt
ide-ui/: build.gradle.kts
ide-ui/src/commonMain/composeResources/values/: strings.xml
ide-ui/src/commonMain/composeResources/values-zh/: strings.xml
ide-ui/src/commonMain/kotlin/dev/ide/ui/: RakshaAiApp.kt
ide-ui/src/commonMain/kotlin/dev/ide/ui/backend/: FileActions.kt
ide-ui/src/commonMain/kotlin/dev/ide/ui/components/: EditorChrome.kt  OnboardingMocks.kt
ide-ui/src/jvmShared/kotlin/dev/ide/ui/ai/: AiChatScreen.kt
